07-03-26 Rene Fritz  <r.fritz@colorcube.de>

	* Fix: typo in tx_dam_browse_media: t3lib_div::trimeExplode()

07-03-16 Rene Fritz  <r.fritz@colorcube.de>

	* Fix: 5113: tx_dam::path_makeClean() will handle /./ now

07-03-11 Rene Fritz  <r.fritz@colorcube.de>

	* Fix: 4287: In multilingual environments wrong files are displayed in the non-default languages
    * Change: Workaround for media browser of htmlArea in T3 4.1

07-03-06 Rene Fritz  <r.fritz@colorcube.de>

	* Fix: 5143: Categories module shows php error
	* Fix: 0004681: make mm compatible with 4.1
	* Fix: added needed MM field for T3 4.1 and changed file_path to varchar
	* Change: tca_media_field.php: set 'MM_opposite_field' => 'file_usage',
    * Change: tx_dam_db workaround, using tx_dam.sorting_foreign when TYPO3 4.1
    * Change: some smaller code cleanups merged from 1.1
    * Change: added check for TYPO3 4.1 in tx_dam_tcefunc

07-02-22 Rene Fritz  <r.fritz@colorcube.de>

	* Fix: tx_dam_selection misses unserialize() function

07-02-21 Rene Fritz  <r.fritz@colorcube.de>

	* Fix: tx_dam_mm_cat table lacked the field "tablenames" which might be needed in some circumstances

06-12-07 Rene Fritz  <r.fritz@colorcube.de>

	* Fix: tx_dam_guifunc:thumbnail() generate checksum for thumbs.php. Needed for t3 4.0.3

06-11-26 Rene Fritz  <r.fritz@colorcube.de>

	* Fix: 3864#: After replacing an existing file in DAM re-indexing fails.


06-11-24 Rene Fritz  <r.fritz@colorcube.de>

	* Fix: added check to tx_dam_tce_process if a file exists that should be deleted
	* Fix: #4263: DAM Media Browser doesn't select any file, if disallowed_types are defined in TCA
	* Fix: #4231: resultsPerPage does not work correctly
	* Fix: #4232: The umlaute of selected categories are shown in uft-chars with BE in utf8

06-09-13 Rene Fritz  <r.fritz@colorcube.de>

	* change: field file_path is changed to varchar(255) and defined as index (including file_name and other) which will speed up things!!
